fixing border radius and background gradient on safari

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,10 @@ body {
   height: 100vh;
   background-image: linear-gradient(#5400A8, #B8000099, #E8D000);
   background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   background-attachment: fixed;
   margin: 0;
 }
@@ -33,6 +37,9 @@ h4 {
   outline: 0.25rem solid white;
   padding: 0.5rem;
   border-radius: 1rem;
+  -webkit-border-radiuse: 1rem;
+  -moz-border-radius: 1rem;
+  -o-border-radius: 1rem;
 }
 
 img {
